# ProofAssistant

./: .ghci  .gitignore  Formula.hs  FormulaPCLaws.hs  K3SemanticsPC.hs  Main.hs  Misc.hs  Parser.hs  ParserFormula.hs  ParserProp.hs  ParserRequest.hs  ParserRequestArgs.hs  ParserRequestArguments.hs  PrettyPrint.hs  ProcessTasks.hs  Prop.hs  PropSemantics.hs  PropSemanticsK3.hs  PropSemanticsLP.hs  PropSemanticsPC.hs  PropSemanticsRM.hs  Request.hs  Semantics.hs  ShowBox.hs  clank.cabal
Logic/: Formula.hs
src/: Clank.hs  Formula.hs  Main.hs  Parser.hs  ParserFormula.hs  ParserRequestArgs.hs  ParserTasks.hs  ProcessTasks.hs  PropSemanticsK3.hs  PropSemanticsL3.hs  PropSemanticsLP.hs  PropSemanticsPC.hs  PropSemanticsRM.hs  Request.hs  Semantics.hs  SemanticsPropK3.hs  SemanticsPropL3.hs  SemanticsPropLP.hs  SemanticsPropPC.hs  SemanticsPropRM.hs
src/Clank/Data/: PrettyPrint.hs  Request.hs  Task.hs
src/Clank/Parser/: Task.hs
src/Clank/Process/: Misc.hs  Tasks.hs
src/Data/: Formula.hs  FormulaPCLaws.hs  Prop.hs
src/Logic/Data/: Formula.hs  Prop.hs
src/Logic/Parser/: Formula.hs  Prop.hs
src/Logic/Semantics/: Prop.hs  Semantics.hs  SemanticsInternal.hs
src/Logic/Semantics/Prop/: Internal.hs  K3.hs  L3.hs  LP.hs  PC.hs  RM.hs
src/Parser/: Formula.hs  Parser.hs  Prop.hs  Tasks.hs
src/Semantics/: Semantics.hs  SemanticsInternal.hs
src/Semantics/Prop/: K3.hs  L3.hs  LP.hs  PC.hs  RM.hs
test/: MainTestSuite.hs
