name:                clank
version:             0.1.0.0
synopsis:            logics framework
-- description:         
-- license:             
-- license-file:     LICENSE
author:              Julian Müller
maintainer:          jul.mue@hotmail.de
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable clank
    main-is:
        Main.hs
    other-modules:
        Clank.Process.Misc,
        Clank.Data.PrettyPrint,
        Clank.Process.Tasks,
        Clank.Data.Request,
        Clank.Data.ShowBox,
        Data.Formula,
        Data.FormulaPCLaws,
        Parser.Formula,
        Parser.Parser,
        Parser.Prop,
        Parser.Tasks,
        Semantics.Semantics,
        Semantics.Prop.K3,
        Semantics.Prop.L3,
        Semantics.Prop.LP,
        Semantics.Prop.PC,
        Semantics.Prop.RM,
        Setup
    other-extensions:    
        ExistentialQuantification
    build-depends:       
        base >=4.7 && <4.8,
        containers >=0.5 && <0.6,
        parsec >=3.1 && <3.2,
        transformers >=0.3 && <0.4
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    ghc-options: -O2 -Wall


test-suite tests
    main-is:           
        MainTestSuite.hs
    type:              
        exitcode-stdio-1.0
    hs-source-dirs:    
        test, 
        src
    build-depends:     
        base,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        containers >=0.5 && <0.6
