name:                clank
version:             0.1.0.0
synopsis:            logics framework
-- description:         
-- license:             
-- license-file:     LICENSE
author:              Julian Müller
maintainer:          jul.mue@hotmail.de
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable clank
    main-is:
        Main.hs
    other-modules:
        Clank.Process.Tasks,
        Clank.Data.PrettyPrint,
        Clank.Data.ShowBox,
        Clank.Data.Task,
        Clank.Parser.Task,
        Logic.Data.Formula,
        Logic.Data.FormulaPCLaws,
        Logic.Parser.Formula,
        Logic.Parser.Parser,
        Logic.Parser.Prop,
        Logic.Semantics.Semantics,
        Logic.Semantics.Prop.K3,
        Logic.Semantics.Prop.L3,
        Logic.Semantics.Prop.LP,
        Logic.Semantics.Prop.PC,
        Logic.Semantics.Prop.RM
    other-extensions:    
        ExistentialQuantification
    build-depends:       
        base >=4.7 && <4.8,
        containers >=0.5 && <0.6,
        parsec >=3.1 && <3.2,
        transformers >=0.3 && <0.4
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    ghc-options: -O2 -Wall

Library
    hs-source-dirs: 
        src 
    GHC-Options: 
        -Wall -Werror
    Exposed-Modules:
        Logic.Semantics.Semantics,
        Logic.Data.Formula,
        Logic.Data.Prop,
        Logic.Parser.Formula,
        Logic.Parser.Prop,
        Logic.Semantics.Prop.PC,
        Logic.Semantics.Prop.K3,
        Logic.Semantics.Prop.L3,
        Logic.Semantics.Prop.LP,
        Logic.Semantics.Prop.RM
   Other-Modules:
        Logic.Semantics.SemanticsInternal
   Build-Depends:
        base >=4.7 && <4.8,
        containers >=0.5 && <0.6,
        parsec >=3.1 && <3.2,
        transformers >=0.3 && <0.4

test-suite tests
    main-is:           
        MainTestSuite.hs
    type:              
        exitcode-stdio-1.0
    hs-source-dirs:    
        test, 
        src
    build-depends:     
        base,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        containers >=0.5 && <0.6
