name:                clank
version:             0.1.0.0
synopsis:            logics framework
license:             GPL3             
author:              Julian Müller
maintainer:          jul.mue@hotmail.de
copyright:           Julian Müller
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable clank
    main-is:
        Main.hs
    other-modules:
        Clank.Process.Tasks,
        Clank.Data.PrettyPrint,
        Clank.Data.ShowBox,
        Clank.Data.Task,
        Clank.Parser.Task,
        Logic.Data.Formula,
        Logic.Data.FormulaPCLaws,
        Logic.Parser.Formula,
        Logic.Parser.Parser,
        Logic.Parser.Prop,
        Logic.Semantics.Prop,
        Logic.Semantics.Prop.Internal,
        Logic.Semantics.Prop.K3,
        Logic.Semantics.Prop.L3,
        Logic.Semantics.Prop.LP,
        Logic.Semantics.Prop.PC,
        Logic.Semantics.Prop.RM
    other-extensions:    
        ExistentialQuantification
    build-depends:       
        base >=4.7 && <4.8,
        containers >=0.5 && <0.6,
        parsec >=3.1 && <3.2,
        transformers >=0.3 && <0.4
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    ghc-options: -O2 -Wall

library
    hs-source-dirs: 
        src 
    ghc-options: 
        -Wall -Werror
    exposed-modules:
        Logic.Data.Formula,
        Logic.Data.Prop,
        Logic.Parser.Formula,
        Logic.Parser.Prop,
        Logic.Semantics.Prop,
        Logic.Semantics.Prop.PC,
        Logic.Semantics.Prop.K3,
        Logic.Semantics.Prop.L3,
        Logic.Semantics.Prop.LP,
        Logic.Semantics.Prop.RM
    other-modules:
        Logic.Semantics.Prop.Internal
    build-depends:
        base >=4.7 && <4.8,
        containers >=0.5 && <0.6,
        parsec >=3.1 && <3.2,
        transformers >=0.3 && <0.4
    default-language:
        Haskell2010

test-suite tests
    main-is:           
        MainTestSuite.hs
    type:              
        exitcode-stdio-1.0
    hs-source-dirs:    
        test, 
        src
    build-depends:     
        base,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,
        containers >=0.5 && <0.6
    default-language:
        Haskell2010
